Added some resources

--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -39,6 +39,15 @@
 							<li>Each competitor must have their own laptop to use, as well as a printer to print off their 
 							results</li>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>2022 Starter Files: <a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" 
+								style="color:#e0533d">link</a></li>
+							<li>How to Database: <a 
+								href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
+								style="color:#e0533d">link</a></li>
+						</ul>
 					</section>
 				</div>
 			</div>
