--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -51,6 +51,18 @@
 							<li>Base total of 60 points per question, decreasing by 5 for each wrong submission</li>
 							<li>Deductions only affect your programming score if you eventually get the problem right</li>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>Codeforces: <a href="https://codeforces.com/" style="color:#e0533d">link</a></li>
+							<li>USACO: <a href="http://www.usaco.org/" style="color:#e0533d">link</a></li>
+							<li>Topic List: <a href="https://www.uiltexas.org/files/academics/UILCS-JavaTopicList2122.pdf" 
+								style="color:#e0533d">link</a></li>
+							<li>Java Docs: <a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
+								style="color:#e0533d">link</a></li>
+							<li>Google Docs Review Sheet: <a href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
+								style="color:#e0533d">link</a></li>
+						</ul>
 					</section>
 				</div>
 			</div>
