--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -37,6 +37,43 @@
 							<li>Note that although individual rankings will aggregate the MCQ and essay, team scores will only 
 							consider the non-essay portion</li>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>Current Events Twitter: <a 
+								href="https://twitter.com/uilciande?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" 
+								style="color:#e0533d">link</a></li>
+							<li>Recommended Sites and Sources:
+								<ul>
+									<li><a href="https://www.texastribune.org/" style="color:#e0533d">
+										Texas Tribune</a></li>
+									<li><a href="http://www.mystatesman.com/" style="color:#e0533d">
+										Austin American-Statesman</a></li>
+									<li><a href="https://www.dallasnews.com/" style="color:#e0533d">
+										Dallas Morning News</a></li>
+									<li><a href="http://www.chron.com/" style="color:#e0533d">
+										Houston Chronicle</a></li>
+									<li><a href="https://www.nytimes.com/" style="color:#e0533d">
+										New York Times</a></li>
+									<li><a href="https://www.washingtonpost.com/" style="color:#e0533d">
+										Washington Post</a></li>
+									<li><a href="https://www.usatoday.com/" style="color:#e0533d">
+										USA Today</a></li>
+									<li><a href="http://www.bbc.com/news" style="color:#e0533d">
+										BBC</a></li>
+									<li><a href="http://www.pbs.org/newshour/" style="color:#e0533d">
+										PBS News Hour</a></li>
+									<li><a href="http://www.npr.org/" style="color:#e0533d">
+										National Public Radio</a></li>
+									<li><a href="http://www.cnn.com/" style="color:#e0533d">
+										CNN</a></li>
+									<li><a href="http://www.msnbc.com/" style="color:#e0533d">
+										MSNBC</a></li>
+									<li><a href="http://www.foxnews.com/" style="color:#e0533d">
+										Fox News</a></li>
+								<ul>
+							</li>
+						</ul>
 					</section>
 				</div>
 			</div>
