--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -34,6 +34,13 @@
 								<li>The essay is graded on its own rubric</li>
 							</ul>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>2022-2023 Reading List: <a 
+								href="https://www.uiltexas.org/files/academics/RL2022-20231.pdf" 
+								style="color:#e0533d">link</a></li>
+						</ul>
 					</section>
 				</div>
 			</div>
