--- a/desc/science.html
+++ b/desc/science.html
@@ -51,6 +51,10 @@
 								<li>TI-30 XIIS</li>
 							</ul>
 						</ul>
+
+						<h4>Resources</h4>
+							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
+								by Richard Feynman</li>
 					</section>
 				</div>
 			</div>
