--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -37,6 +37,13 @@
 							<li>Part 2 will be 70 writing questions, and Part 3 will be 20 questions in similar format (note 
 							that neither of these have a set time, so it's really dependent on the meet itself</li>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>2022-2023 Word Power: <a 
+								href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf" 
+								style="color:#e0533d">link</a></li>
+						</ul>
 					</section>
 				</div>
 			</div>
