--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
 						questions or suggestions feel free to reach out (you can find my contact <a style="color: #000" 
 						href="https://warithr621.github.io/media.html"><u>here</u></a>).</p>
+						<p>By the way, <a 
+							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing" 
+							style="color:#e0533d">this drive folder</a> should have a couple of past tests available for 
+							Calculator, Computer Science, General Math, Number Sense, and Science.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
@@ -41,9 +45,8 @@
 						<h2>How do I join?</h2>
 						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
 						August or early September, most likely at Lowery. If the meeting had already happened, you could try either 
-						asking someone who you know is in UIL, or try emailing Ms. Gesh at <a 
-						href="dawn.geshwender@allenisd.org" style="color: #000"> dawn.geshwender@allenisd.org</a> for more info on 
-						how to join.</p>
+						asking someone who you know is in UIL, or try emailing Ms. Gesh at dawn.geshwender@allenisd.org</a> 
+							for more info on how to join.</p>
 						<br>
 						<h2>When are competitions?</h2>
 						<p>The fall semester is primarily practices, which occur on a weekly basis at either Allen High School 
