--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -33,6 +33,13 @@
 								<li>The essay is graded from a scale of 0 to 20</li>
 							</ul>
 						</ul>
+
+						<h4>Resources</h4>
+						<ul>
+							<li>2022-2023 Reading List (WWI to the Great Depression): <a 
+								href="https://www.uiltexas.org/files/academics/FINAL_2022-2023_Social_Studies_Reading_List_and_Terms_8_1_22_(2).pdf" 
+								style="color:#e0533d">link</a></li>
+						</ul>
 					</section>
 				</div>
 			</div>
