--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						goes. Everyone, both the best and the worst, all start from a basic block and grow from learning. Even if 
 						you're entirely new at a competition, you may later realize that it's pretty interesting and that you even 
 						excel at it. Regardless, both the meetings and the competitions are a great way to learn something new, 
-						show off your newfound knowledge, and spend a ncie Saturday with some friends. Everyone always has room 
+						show off your newfound knowledge, and spend a nice Saturday with some friends. Everyone always has room 
 						for improvement, and that all starts just by taking the first step to try something.</p>
 						<br>
 					</section>
