--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -17,8 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Ms. Smith & Mr. MacVeigh <font size="+1"><u>elizabeth.smith@allenisd.org</u> and 
-				<u>matthew.macveigh@allenisd.org</u></font></h2>
+				<h2>Coach: Ms. Smith <font size="+1"><u>elizabeth.smith@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>This page actually has a couple of contests together, but they're pretty similar in competition style 
