--- a/sched.html
+++ b/sched.html
@@ -43,6 +43,18 @@
 								<td>10/1 - 10/23</td>
 							</tr>
 							<tr>
+								<td><b>UTD Battle of the Brains (CS)</b></td>
+								<td>10/29</td>
+							</tr>
+							<tr>
+								<td><b>AMC 10/12 A</b></td>
+								<td>11/10</td>
+							</tr>
+							<tr>
+								<td><b>AMC 10/12 B</b></td>
+								<td>11/16</td>
+							</tr>
+							<tr>
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
 							</tr>
@@ -57,6 +69,10 @@
 							<tr>
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
+							</tr>
+							<tr>
+								<td><b>AIME</b></td>
+								<td>TBD</td>
 							</tr>
 							<tr>
 								<td><b>Invitational B</b></td>
