--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -61,7 +61,7 @@
 							<li>Java Docs: <a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
 								style="color:#e0533d">link</a></li>
 							<li>Google Docs Review Sheet: <a href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
-								style="color:#e0533d">link</a></li>
+								style="color:#e0533d">link</a> (comment permissions are enabled)</li>
 						</ul>
 					</section>
 				</div>
