--- a/desc/science.html
+++ b/desc/science.html
@@ -55,6 +55,8 @@
 						<h4>Resources</h4>
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
+							<li>Google Docs QED Review: <a href="https://docs.google.com/document/d/1ZJdBtIi8TtXN4hIY-rE_0Gg3x4UJUOoBKMhS5HgmGNs/edit?usp=sharing" 
+								style="color:#e0533d">link</a> (edit permissions are enabled)</li>
 					</section>
 				</div>
 			</div>
