--- a/sched.html
+++ b/sched.html
@@ -36,27 +36,41 @@
 							</tr>
 						</table>
 						<br><br>
-						<h2>Competition Schedule</h2>
+						<h2>Competition Schedule 2022-2023</h2>
+						<p>Competitions highlighted in green have already passed, and underlined competitions are not directly 
+							affiliated with UIL (UIL, VC).</p>
 						<table>
 							<tr>
 								<td><b>VC#1</b></td>
 								<td>10/1 - 10/23</td>
 							</tr>
 							<tr>
-								<td><b>UTD Battle of the Brains (CS)</b></td>
+								<td><b><u>UTD Battle of the Brains (CS)</u></b></td>
 								<td>10/29</td>
 							</tr>
 							<tr>
-								<td><b>AMC 10/12 A</b></td>
+								<td><b><u>ACSL Contest #1</u></b></td>
+								<td>10/31-1/15</td>
+							</tr>
+							<tr>
+								<td><b><u>AMC 10/12 A</u></b></td>
 								<td>11/10</td>
 							</tr>
 							<tr>
-								<td><b>AMC 10/12 B</b></td>
+								<td><b><u>AMC 10/12 B</u></b></td>
 								<td>11/16</td>
 							</tr>
 							<tr>
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
+							</tr>
+							<tr>
+								<td><b><u>USACO December</u></b></td>
+								<td>12/17-12/20</td>
+							</tr>
+							<tr>
+								<td><b><u>ACSL Contest #2</u></b></td>
+								<td>12/26-3/5</td>
 							</tr>
 							<tr>
 								<td><b>VC#3</b></td>
@@ -67,28 +81,72 @@
 								<td>TBA</td>
 							</tr>
 							<tr>
+								<td><b><u>USACO January</u></b></td>
+								<td>1/28-1/31</td>
+							</tr>
+							<tr>
+								<td><b><u>ACSL Contest #3</u></b></td>
+								<td>1/30-4/9</td>
+							</tr>
+							<tr>
+								<td><b><u>USABO Open Round</u></b></td>
+								<td>2/2</td>
+							</tr>
+							<tr>
+								<td><b><u>AIME</u></b></td>
+								<td>TBD</td>
+							</tr>
+							<tr>
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
 							<tr>
-								<td><b>AIME</b></td>
-								<td>TBD</td>
+								<td><b><u>F=ma</u></b></td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b>Invitational B</b></td>
 								<td>TBA</td>
 							</tr>
 							<tr>
+								<td><b><u>USACO February</u></b></td>
+								<td>2/25-2/28</td>
+							</tr>
+							<tr>
+								<td><b><u>ACSL Contest #4</u></b></td>
+								<td>3/6-5/14</td>
+							</tr>
+							<tr>
+								<td><b><u>Local Chemistry Olympiad</u></b></td>
+								<td>TBA</td>
+							</tr>
+							<tr>
+								<td><b><u>USABO Semifinals</u></b></td>
+								<td>3/16</td>
+							</tr>
+							<tr>
 								<td><b>UIL Districts</b></td>
 								<td>3/23 - 3/25</td>
+							</tr>
+							<tr>
+								<td><b><u>USACO US Open</u></b></td>
+								<td>3/25-3/28</td>
 							</tr>
 							<tr>
 								<td><b>VC Regionals</b></td>
 								<td>4/3 - 4/18</td>
 							</tr>
 							<tr>
+								<td><b><u>USAPhO</u></b></td>
+								<td>TBA</td>
+							</tr>
+							<tr>
 								<td><b>UIL Regionals</b></td>
 								<td>4/21 - 4/22</td>
+							</tr>
+							<tr>
+								<td><b><u>USNCO</u></b></td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b>VC State</b></td>
@@ -96,7 +154,11 @@
 							</tr>
 							<tr>
 								<td><b>UIL State</b></td>
-								<td>5/17 - 5/18 (Tentative)</td>
+								<td>5/17 - 5/18</td>
+							</tr>
+							<tr>
+								<td><b><u>ACSL Finals</u></b></td>
+								<td>5/27</td>
 							</tr>
 						</table>
 					</section>
