--- a/sched.html
+++ b/sched.html
@@ -66,7 +66,7 @@
 							</tr>
 							<tr>
 								<td><b><u>USACO December</u></b></td>
-								<td>12/17-12/20</td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b><u>ACSL Contest #2</u></b></td>
@@ -78,11 +78,11 @@
 							</tr>
 							<tr>
 								<td><b>Invitational A</b></td>
-								<td>TBA</td>
+								<td>TBD</td>
 							</tr>
 							<tr>
 								<td><b><u>USACO January</u></b></td>
-								<td>1/28-1/31</td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b><u>ACSL Contest #3</u></b></td>
@@ -106,11 +106,11 @@
 							</tr>
 							<tr>
 								<td><b>Invitational B</b></td>
-								<td>TBA</td>
+								<td>TBD</td>
 							</tr>
 							<tr>
 								<td><b><u>USACO February</u></b></td>
-								<td>2/25-2/28</td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b><u>ACSL Contest #4</u></b></td>
@@ -130,7 +130,7 @@
 							</tr>
 							<tr>
 								<td><b><u>USACO US Open</u></b></td>
-								<td>3/25-3/28</td>
+								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b>VC Regionals</b></td>
