Fixed width I think

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<h2>What is this site?</h2>
 				<div class="row">
-					<section class="col-md-8 col-xl-9">
+					<section class="col-md-8 col-xl-8">
 						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. I wanted to make this site as an 
 						alternative resource for all things Allen UIL. This should include descriptions of the many competitions 
 						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
@@ -77,9 +77,9 @@
 						for improvement, and that all starts just by taking the first step to try something.</p>
 						<br>
 					</section>
-					<section class="col-md-4 col-xl-3">
+					<section class="col-md-4 col-xl-4">
 						<a href="https://www.youtube.com/watch?v=qoq8B8ThgEM"><img src="images/trophy_2022.png" 
-						alt="2nd Sweepstakes Trophy" width="300" height="250"></a>
+						alt="2nd Sweepstakes Trophy" style="max-width: 100%; height: auto;"></a>
 					</section>
 				</div>
 			</div>
