--- a/sched.html
+++ b/sched.html
@@ -25,13 +25,13 @@
 					<section class="col-md-8 col-xl-9">
 						<table>
 							<tr>
-								<th>Wednesday</th>
-								<th>Thursday</th>
-								<th>Friday</th>
+								<th>Tuesdays</th>
+								<th>Wednesdays</th>
+								<th>Fridays</th>
 							</tr>
 							<tr>
+								<td>Computer Science<br>Lowery Lower E Pod<br>*Tentatively Every Other Week</td>
 								<td>Science<br>Lowery Lower E Pod</td>
-								<td>Computer Science<br>Lowery Lower E Pod<br>*Every Other Week</td>
 								<td>Math (NS, CAL, GM)<br>Lowery @ B110</td>
 							</tr>
 						</table>
