--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 						<p>By the way, <a 
 							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing" 
 							style="color:#e0533d">this drive folder</a> should have a couple of past tests available for 
-							Calculator, Computer Science, General Math, Number Sense, and Science.</p>
+							Calculator, Computer Science, General Math, Number Sense, and Science. You should also join the 
+							Discord server for more updates <a href="https://discord.gg/5zWEJhWtud" 
+							style="color:#e0533d">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
