--- a/sched.html
+++ b/sched.html
@@ -30,9 +30,14 @@
 								<th>Fridays</th>
 							</tr>
 							<tr>
-								<td>Computer Science<br>Lowery Lower E Pod<br>*Tentatively Every Other Week</td>
-								<td>Science<br>Lowery Lower E Pod</td>
-								<td>Math (NS, CAL, GM)<br>Lowery @ B110</td>
+								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Tentatively Every Other Week</td>
+								<td><u>Science</u><br>Lowery Lower E Pod</td>
+								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ B110</td>
+							</tr>
+							<tr>
+								<td></td>
+								<td></td>
+								<td><u>Current Events</u><br>Lowery Lower E Pod</td>
 							</tr>
 						</table>
 						<br><br>
@@ -42,7 +47,7 @@
 						<table>
 							<tr>
 								<td><b>VC#1</b></td>
-								<td>10/1 - 10/23</td>
+								<td>10/3 - 10/29</td>
 							</tr>
 							<tr>
 								<td><b><u>UTD Battle of the Brains (CS)</u></b></td>
