09/09/2022 - added new CS materials - added Carl as alt point of contact - added Knowt link

--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -54,14 +54,30 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>Codeforces: <a href="https://codeforces.com/" style="color:#e0533d">link</a></li>
-							<li>USACO: <a href="http://www.usaco.org/" style="color:#e0533d">link</a></li>
-							<li>Topic List: <a href="https://www.uiltexas.org/files/academics/UILCS-JavaTopicList2122.pdf" 
-								style="color:#e0533d">link</a></li>
-							<li>Java Docs: <a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
-								style="color:#e0533d">link</a></li>
-							<li>Google Docs Review Sheet: <a href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
-								style="color:#e0533d">link</a> (comment permissions are enabled)</li>
+							<li>Basics of Java</li>
+								<ul>
+								<li>Codecademy: <a href="https://www.codecademy.com/learn/learn-java" 
+									style="color:#e0533d">link</a>
+								<li>W3: <a href="https://www.w3schools.com/java/default.asp" 
+									style="color:#e0533d">link</a>
+								<li>Not basic, but Java docs: <a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
+									style="color:#e0533d">link</a>
+								</ul>
+							<li>Written:</li>
+								<ul>
+								<li>Topic List: <a 
+									href="https://www.uiltexas.org/files/academics/UILCS-JavaTopicList2122.pdf" 
+									style="color:#e0533d">link</a></li>
+								<li>Google Docs Review Sheet: <a 
+									href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
+									style="color:#e0533d">link</a> (comment permissions are enabled)</li>
+								</ul>
+							<li>Prog:</li>
+								<ul>
+								<li>Codeforces: <a href="https://codeforces.com/" style="color:#e0533d">link</a></li>
+								<li>USACO: <a href="http://www.usaco.org/" style="color:#e0533d">link</a></li>
+								</ul>
+							
 						</ul>
 					</section>
 				</div>
