--- a/desc/science.html
+++ b/desc/science.html
@@ -53,6 +53,9 @@
 						</ul>
 
 						<h4>Resources</h4>
+							<li>AP Chem Notes: <a
+								href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
+								style="color:#e0533d">link</a> (some docs are not viewable w/o AISD account)</li>
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
 							<li>Google Docs QED Review: <a href="https://docs.google.com/document/d/1ZJdBtIi8TtXN4hIY-rE_0Gg3x4UJUOoBKMhS5HgmGNs/edit?usp=sharing" 
