--- a/desc/science.html
+++ b/desc/science.html
@@ -24,7 +24,7 @@
 						biology, which cover a variety of concepts introduced in AP Biology as well as more "wildcard" questions 
 						that are less commonly known. The chemistry questions cover a lot of material typically from Advanced and 
 						AP Chemistry, and apply many of the ideas to solve problems from lattice structure to thermodynamic 
-						favorness. Physics covers practically everything from the AP Physics series (1, 2, C Mech, C E&M) and 
+						favorability. Physics covers practically everything from the AP Physics series (1, 2, C Mech, C E&M) and 
 						more; this section tests a combination of problems from an annually assigned reading, Mechanics and E&M
 						problems, and wrapping it up with linearization. As there's three different subjects covered, contestants 
 						can additionally advance from Districts to Regionals to State through an individual topic, placing 1st in 
@@ -53,6 +53,8 @@
 						</ul>
 
 						<h4>Resources</h4>
+							<li>AP Bio from Warith's 21/22 BILL: <a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
+								style="color:#e0533d">link</a> (comment permissions are enabled)</li>
 							<li>AP Chem Notes: <a
 								href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
 								style="color:#e0533d">link</a> (some docs are not viewable w/o AISD account)</li>
