--- a/sched.html
+++ b/sched.html
@@ -42,16 +42,12 @@
 						</table>
 						<br><br>
 						<h2>Competition Schedule 2022-2023</h2>
-						<p>Competitions highlighted in green have already passed, and underlined competitions are not directly 
-							affiliated with UIL (UIL, VC).</p>
+						<p>Competitions highlighted in green have already passed, and those in yellow are windows in progress. 
+							Underlined competitions are not directly affiliated with UIL (anything other than UIL and VCs).</p>
 						<table>
-							<tr>
+							<tr class="progress">
 								<td><b>VC#1</b></td>
 								<td>10/3 - 10/29</td>
-							</tr>
-							<tr>
-								<td><b><u>UTD Battle of the Brains (CS)</u></b></td>
-								<td>10/29</td>
 							</tr>
 							<tr>
 								<td><b><u>ACSL Contest #1</u></b></td>
