--- a/desc/science.html
+++ b/desc/science.html
@@ -60,8 +60,9 @@
 								style="color:#e0533d">link</a> (some docs are not viewable w/o AISD account)</li>
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
-							<li>Google Docs QED Review: <a href="https://docs.google.com/document/d/1ZJdBtIi8TtXN4hIY-rE_0Gg3x4UJUOoBKMhS5HgmGNs/edit?usp=sharing" 
-								style="color:#e0533d">link</a> (edit permissions are enabled)</li>
+							<li>2022-2023 Physics Topic List: <a 
+								href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
+								style="color:#e0533d">link</a></li>
 					</section>
 				</div>
 			</div>
