--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -43,6 +43,9 @@
 							<li>2022-2023 Word Power: <a 
 								href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf" 
 								style="color:#e0533d">link</a></li>
+							<li>Official Dictionary: <i>The American Heritage Dictionary of the English Language, Fifth 
+								Edition: Fiftieth Anniversary Printing</i> 2018 (similar online version can be found 
+								<a href="https://ahdictionary.com/" style="color:#e0533d">here</a>)</li>
 						</ul>
 					</section>
 				</div>
