--- a/sched.html
+++ b/sched.html
@@ -94,12 +94,12 @@
 								<td>2/2</td>
 							</tr>
 							<tr>
-								<td><b><u>AIME</u></b></td>
-								<td>TBD</td>
-							</tr>
-							<tr>
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
+							</tr>
+							<tr>
+								<td><b><u>AIME (II)</u></b></td>
+								<td>2/15</td>
 							</tr>
 							<tr>
 								<td><b><u>F=ma</u></b></td>
@@ -156,10 +156,6 @@
 							<tr>
 								<td><b>UIL State</b></td>
 								<td>5/17 - 5/18</td>
-							</tr>
-							<tr>
-								<td><b><u>ACSL Finals</u></b></td>
-								<td>5/27</td>
 							</tr>
 						</table>
 					</section>
