--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -40,9 +40,9 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>Current Events Twitter: <a 
+							<li><a 
 								href="https://twitter.com/uilciande?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" 
-								style="color:#e0533d">link</a></li>
+								style="color:#e0533d">Current Events Twitter</a></li>
 							<li>Recommended Sites and Sources:
 								<ul>
 									<li><a href="https://www.texastribune.org/" style="color:#e0533d">
