--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -70,24 +70,18 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>Copy Editing PPT: <a 
-								href="https://www.uiltexas.org/files/academics/journalism/Copy_editing_21-22b.pdf" 
-								style="color:#e0533d">link</a></li>
-							<li>Editorial Writing PPT: <a 
-								href="https://www.uiltexas.org/files/academics/journalism/Editorial2021.pdf" 
-								style="color:#e0533d">link</a></li>
-							<li>Feature Writing PPT: <a 
-								href="https://www.uiltexas.org/files/academics/journalism/feature_2021.pdf" 
-								style="color:#e0533d">link</a></li>
-							<li>Headline Writing PPT: <a 
-								href="https://www.uiltexas.org/files/academics/journalism/2021head.ppt" 
-								style="color:#e0533d">link</a></li>
-							<li>News Writing PPT: <a 
-								href="https://www.uiltexas.org/files/academics/journalism/2021_Newswritingedit.pdf" 
-								style="color:#e0533d">link</a></li>
-							<li>2016 4A State Champion Ready Writing Essay: <a 
-								href="https://www.uiltexas.org/files/academics/4A-ready_writing_state_champ_06.pdf" 
-								style="color:#e0533d">link</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/journalism/Copy_editing_21-22b.pdf" 
+								style="color:#e0533d">Copy Editing PPT</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/journalism/Editorial2021.pdf" 
+								style="color:#e0533d">Editorial Writing PPT</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/journalism/feature_2021.pdf" 
+								style="color:#e0533d">Feature Writing PPT</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/journalism/2021head.ppt" 
+								style="color:#e0533d">Headling Writing PPT</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/journalism/2021_Newswritingedit.pdf" 
+								style="color:#e0533d">News Writing PPT</a></li>
+							<li>:<a href="https://www.uiltexas.org/files/academics/4A-ready_writing_state_champ_06.pdf" 
+								style="color:#e0533d">2016 4A State Champion Ready Writing Essay</a></li>
 						</ul>
 					</section>
 				</div>
