--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -37,9 +37,8 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>2022-2023 Reading List: <a 
-								href="https://www.uiltexas.org/files/academics/RL2022-20231.pdf" 
-								style="color:#e0533d">link</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/RL2022-20231.pdf" 
+								style="color:#e0533d">2022-2023 Reading List</a></li>
 						</ul>
 					</section>
 				</div>
