--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -40,12 +40,20 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>2022-2023 Word Power: <a 
-								href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf" 
-								style="color:#e0533d">link</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf" 
+								style="color:#e0533d">2022-2023 Word Power</a></li>
 							<li>Official Dictionary: <i>The American Heritage Dictionary of the English Language, Fifth 
 								Edition: Fiftieth Anniversary Printing</i> 2018 (similar online version can be found 
 								<a href="https://ahdictionary.com/" style="color:#e0533d">here</a>)</li>
+							<li>Knowts Flashcards for...</li>
+							<ul>
+								<li><a href="https://knowt.io/flashcards/e23feedd-e52e-42cc-996d-64d91e2f6724" 
+									style="color:#e0533d">Primary Definitions</a></li>
+								<li><a href="https://knowt.io/flashcards/71ae47f9-7232-471a-8d49-52b8702bf120" 
+									style="color:#e0533d">Alternate Definitions</a></li>
+								<li><a href="https://knowt.io/flashcards/e59ef794-d670-4bb8-880a-8b0498ac14d7" 
+									style="color:#e0533d">Irregular Plural Forms</a></li>
+							</ul>
 						</ul>
 					</section>
 				</div>
