--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 				<a href="index.html" class="active">Home</a>
 				<a href="subj.html" class>Subjects</a>
 				<a href="sched.html" class>Schedule</a>
-				<a href="https://allen-uil.github.io/blog/" class>Blog</a>
 			</nav>
 		</header>
 		<main>
@@ -41,8 +40,8 @@
 						side of this focuses on a variety of competitions for students to show off their expertise, whether that 
 						be in STEM, a humanities competition, or even something not necessarily either!</p>
 						<p>Allen's been participating in this for a while, and just recently we finished 2nd sweepstakes at the 
-						2022 State competition (trophy on right), including having 2 state champions and having the best 6A
-						spelling team for two years running!</p>
+						2022 State competition (trophy on right), including having 2 individual state champions and having the best 
+						6A spelling team for two years running!</p>
 						<br>
 						<h2>How do I join?</h2>
 						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
