--- a/sched.html
+++ b/sched.html
@@ -15,7 +15,6 @@
 				<a href="index.html" class>Home</a>
 				<a href="subj.html" class>Subjects</a>
 				<a href="sched.html" class="active">Schedule</a>
-				<a href="https://allen-uil.github.io/blog/" class>Blog</a>
 			</nav>
 		</header>
 		<main>
@@ -30,7 +29,7 @@
 								<th>Fridays</th>
 							</tr>
 							<tr>
-								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Tentatively Every Other Week</td>
+								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Every Other Week</td>
 								<td><u>Science</u><br>Lowery Lower E Pod</td>
 								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ B110</td>
 							</tr>
@@ -44,12 +43,13 @@
 						<h2>Competition Schedule 2022-2023</h2>
 						<p>Competitions highlighted in green have already passed, and those in yellow are windows in progress. 
 							Underlined competitions are not directly affiliated with UIL (anything other than UIL and VCs).</p>
+						<!-- class names are 'progress' and 'complete' -->
 						<table>
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#1</b></td>
 								<td>10/3 - 10/29</td>
 							</tr>
-							<tr>
+							<tr class="progress">
 								<td><b><u>ACSL Contest #1</u></b></td>
 								<td>10/31-1/15</td>
 							</tr>
