--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -42,11 +42,10 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li>2022 Starter Files: <a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" 
-								style="color:#e0533d">link</a></li>
-							<li>How to Database: <a 
-								href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
-								style="color:#e0533d">link</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" 
+								style="color:#e0533d">2022 Starter Files</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
+								style="color:#e0533d">How to Database</a></li>
 						</ul>
 					</section>
 				</div>
