--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -26,7 +26,7 @@
 						hear the word and its definition and spell it accordingly. UIL's Word Power changes every year, so make 
 						sure to find the latest one on the UIL site.</p>
 						<ul>
-							<li>100 questions + 20q tiebreaker</li>
+							<li>100 questions + 20-question tiebreaker</li>
 							<li>About 60 minutes</li>
 							<li>Scoring:</li>
 							<ul>
