--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. I wanted to make this site as an 
 						alternative resource for all things Allen UIL. This should include descriptions of the many competitions 
 						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
-						questions or suggestions feel free to reach out (you can find my contact <a style="color: #000" 
-						href="https://warithr621.github.io/media.html"><u>here</u></a>).</p>
+						questions or suggestions you can contact me <a style="color: #000" 
+						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
 						<p>By the way, <a 
 							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing" 
 							style="color:#e0533d">this drive folder</a> should have a couple of past tests available for 
