--- a/desc/accounting.html
+++ b/desc/accounting.html
@@ -17,7 +17,8 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Point of Contact: Fayyad Hasnain <font size="+1"><u>fayyad.hasnain@student.allenisd.org</u></font></h2>
+				<h2>Point of Contact: Fayyad Hasnain <font size="+1"><u>fayyad.hasnain@student.allenisd.org</u></font> or 
+					Carson Smith <font size="+1"><u>carson.smith@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Although this uses a lot of math, accounting is actually very vocabulary focused. With a basic 
