--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -17,7 +17,8 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
+				<h2>Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font> or 
+					Andrew Bourinski <font size="+1"><u>andrew.bourinski@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>You remember BIM class from middle school? That class alongside some studying might make you a great 
