--- a/sched.html
+++ b/sched.html
@@ -49,29 +49,21 @@
 								<td><b>VC#1</b></td>
 								<td>10/3 - 10/29</td>
 							</tr>
-							<tr class="progress">
-								<td><b><u>ACSL Contest #1</u></b></td>
-								<td>10/31-1/15</td>
-							</tr>
-							<tr>
+							<tr class="complete">
 								<td><b><u>AMC 10/12 A</u></b></td>
 								<td>11/10</td>
 							</tr>
-							<tr>
+							<tr class="complete">
 								<td><b><u>AMC 10/12 B</u></b></td>
 								<td>11/16</td>
 							</tr>
-							<tr>
+							<tr class="progress">
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
 							</tr>
 							<tr>
 								<td><b><u>USACO December</u></b></td>
 								<td>TBA</td>
-							</tr>
-							<tr>
-								<td><b><u>ACSL Contest #2</u></b></td>
-								<td>12/26-3/5</td>
 							</tr>
 							<tr>
 								<td><b>VC#3</b></td>
@@ -86,12 +78,12 @@
 								<td>TBA</td>
 							</tr>
 							<tr>
-								<td><b><u>ACSL Contest #3</u></b></td>
-								<td>1/30-4/9</td>
-							</tr>
-							<tr>
 								<td><b><u>USABO Open Round</u></b></td>
 								<td>2/2</td>
+							</tr>
+							<tr>
+								<td><b><u>F=ma</u></b></td>
+								<td>2/9</td>
 							</tr>
 							<tr>
 								<td><b>VC#4</b></td>
@@ -102,20 +94,12 @@
 								<td>2/15</td>
 							</tr>
 							<tr>
-								<td><b><u>F=ma</u></b></td>
-								<td>TBA</td>
-							</tr>
-							<tr>
 								<td><b>Invitational B</b></td>
 								<td>TBD</td>
 							</tr>
 							<tr>
 								<td><b><u>USACO February</u></b></td>
 								<td>TBA</td>
-							</tr>
-							<tr>
-								<td><b><u>ACSL Contest #4</u></b></td>
-								<td>3/6-5/14</td>
 							</tr>
 							<tr>
 								<td><b><u>Local Chemistry Olympiad</u></b></td>
