--- a/sched.html
+++ b/sched.html
@@ -63,19 +63,19 @@
 							</tr>
 							<tr>
 								<td><b><u>USACO December</u></b></td>
-								<td>TBA</td>
+								<td>12/16 - 12/19</td>
+							</tr>
+							<tr>
+								<td><b>Invitational A</b></td>
+								<td>Most likely 1/7 @ Location TBA</td>
 							</tr>
 							<tr>
 								<td><b>VC#3</b></td>
 								<td>1/9 - 1/28</td>
 							</tr>
 							<tr>
-								<td><b>Invitational A</b></td>
-								<td>TBD</td>
-							</tr>
-							<tr>
 								<td><b><u>USACO January</u></b></td>
-								<td>TBA</td>
+								<td>1/27 - 1/30</td>
 							</tr>
 							<tr>
 								<td><b><u>USABO Open Round</u></b></td>
@@ -86,6 +86,10 @@
 								<td>2/9</td>
 							</tr>
 							<tr>
+								<td><b>Invitational B</b></td>
+								<td>Most likely 2/11 @ Rock Hill</td>
+							</tr>
+							<tr>
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
@@ -94,16 +98,12 @@
 								<td>2/15</td>
 							</tr>
 							<tr>
-								<td><b>Invitational B</b></td>
-								<td>TBD</td>
-							</tr>
-							<tr>
 								<td><b><u>USACO February</u></b></td>
-								<td>TBA</td>
+								<td>2/24 - 2/27</td>
 							</tr>
 							<tr>
 								<td><b><u>Local Chemistry Olympiad</u></b></td>
-								<td>TBA</td>
+								<td>TBA, between 3/1 and 3/31</td>
 							</tr>
 							<tr>
 								<td><b><u>USABO Semifinals</u></b></td>
@@ -115,7 +115,7 @@
 							</tr>
 							<tr>
 								<td><b><u>USACO US Open</u></b></td>
-								<td>TBA</td>
+								<td>3//24 - 3/27</td>
 							</tr>
 							<tr>
 								<td><b>VC Regionals</b></td>
@@ -123,15 +123,15 @@
 							</tr>
 							<tr>
 								<td><b><u>USAPhO</u></b></td>
-								<td>TBA</td>
+								<td>TBA, sometime mid-April</td>
+							</tr>
+							<tr>
+								<td><b><u>USNCO</u></b></td>
+								<td>TBA, between 4/15 and 4/23</td>
 							</tr>
 							<tr>
 								<td><b>UIL Regionals</b></td>
 								<td>4/21 - 4/22</td>
-							</tr>
-							<tr>
-								<td><b><u>USNCO</u></b></td>
-								<td>TBA</td>
 							</tr>
 							<tr>
 								<td><b>VC State</b></td>
