confirmed dates for invs, I think

--- a/sched.html
+++ b/sched.html
@@ -67,7 +67,7 @@
 							</tr>
 							<tr>
 								<td><b>Invitational A</b></td>
-								<td>Most likely 1/7 @ Location TBA</td>
+								<td>1/7 @ Princeton HS</td>
 							</tr>
 							<tr>
 								<td><b>VC#3</b></td>
@@ -87,7 +87,7 @@
 							</tr>
 							<tr>
 								<td><b>Invitational B</b></td>
-								<td>Most likely 2/11 @ Rock Hill</td>
+								<td>2/11 @ Rock Hill HS</td>
 							</tr>
 							<tr>
 								<td><b>VC#4</b></td>
